rag/yaml/base/frontend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  port:
    targetPort: 8080
  to:
    kind: Service
    name: frontend
    weight: 100
status: {}
