rag/yaml/base/frontend/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: filebrowser
spec:
  hosts:
  - filebrowser.demo.svc.cluster.local
  - filebrowser-demo.apps.demo.com
  gateways:
  - rag-gateway
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 8081
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  hosts:
  - frontend.demo.svc.cluster.local
  - frontend-demo.apps.demo.com
  gateways:
  - rag-gateway
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 8080
      weight: 100
